*SVN*

- Clarified MIT license (Ticket #98)
- Updated Rake tasks to integrate smoothly with Rails 1.1 namespaces
- Changed the version to "1.1.0 (svn)"
- Added more information about using the plugin with Edge Rails to the README
- moved extensions into lib/engines/ directory to enable use of
  Engines module in extension code.
- Added conditional require_or_load method which attempts to detect 
  the current Rails version. To use the Edge Rails version of the loading 
  mechanism, add the line:
    Engines.config :edge, true
  to your environment.rb file.
- Merged changes from /branches/edge and /branches/rb_1.0 into /trunk
- engine_schema_info now respects the prefix/suffixes set for 
  ActiveRecord::Base (Ticket #67)
- added ActiveRecord::Base.wrapped_table_name(name) method to assist
  in determining the correct table name

-----
1.0.6

- Added ability to determine version information for engines: rake engine_info
- Added a custom logger for the Engines module, to stop pollution of the Rails
  logs.
- Added some more tests (in particular, see rails_engines/applications/engines_test).
- Another attempt at solving Ticket #53 - controllers and helpers should now
  be loadable from modules, and if a full path (including 
  RAILS_ROOT/ENGINES_ROOT) is given, it should be safely stripped from the 
  require filename such that corresponding files can be located in any active
  engines. In other words, controller/helper overloading should now completely
  work, even if the controllers/helpers are in modules.
- Added (finally) patch from Ticket #22 - ActionMailer helpers should now load
- Removed support for Engines.start :engine, :engine_name => 'whatever'. It
  was pointless.
- Fixed engine name referencing; engine_stylesheet/engine_javascript can now
  happily use shorthand engine names (i.e. :test == :test_engine) (Ticket #45)
- Fixed minor documentation error ('Engine.start' ==> 'Engines.start')
  (Ticket #57)